# TestOpencvDistanceTransform

./: .gitignore  CMakeLists.txt  Thumbs.db  distCtr.yml  main.cpp  sparseMat.yml
